--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeira pagina</title>
+    <title>Primeira Página</title>
    </head>
    <body>
-    <h1>alô mundo...cheguei</h1>
+    <h1>Alô mundo...Cheguei</h1>
    </body>
    </html>
